--- a/example/options.gqlgen.pb.yml
+++ b/example/options.gqlgen.pb.yml
@@ -11,6 +11,8 @@ models:
     model: github.com/danielvladco/go-proto-gql/example.Data
   DataInput:
     model: github.com/danielvladco/go-proto-gql/example.Data
+  Float32:
+    model: github.com/danielvladco/go-proto-gql/gqltypes.Float32
   Foo2:
     model: github.com/danielvladco/go-proto-gql/example.Foo2
   Foo2Input:
