--- a/example/options.gqlgen.pb.yml
+++ b/example/options.gqlgen.pb.yml
@@ -4,16 +4,19 @@ exec:
   filename: exec.go
 model:
   filename: models.go
-resolver:
-  filename: resolvers.go
 models:
   Data:
-    model: github.com/danielvladco/go-proto-gql/example.Data
+    model:
+    - github.com/danielvladco/go-proto-gql/example.Data
   DataInput:
-    model: github.com/danielvladco/go-proto-gql/example.Data
+    model:
+    - github.com/danielvladco/go-proto-gql/example.Data
   Float32:
-    model: github.com/danielvladco/go-proto-gql/gqltypes.Float32
+    model:
+    - github.com/danielvladco/go-proto-gql/gqltypes.Float32
   Foo2:
-    model: github.com/danielvladco/go-proto-gql/example.Foo2
+    model:
+    - github.com/danielvladco/go-proto-gql/example.Foo2
   Foo2Input:
-    model: github.com/danielvladco/go-proto-gql/example.Foo2
+    model:
+    - github.com/danielvladco/go-proto-gql/example.Foo2
