--- a/example/codegen/gqlgen-options.yaml
+++ b/example/codegen/gqlgen-options.yaml
@@ -5,5 +5,8 @@ exec:
   filename: gql/options/generated.go
   package: options
 
+model:
+  filename: gql/constructs/model.go
+
 autobind:
   - "github.com/danielvladco/go-proto-gql/example/codegen/pb"
