--- a/example/codegen/gqlgen-constructs.yaml
+++ b/example/codegen/gqlgen-constructs.yaml
@@ -5,6 +5,9 @@ exec:
   filename: gql/constructs/generated.go
   package: constructs
 
+model:
+  filename: gql/constructs/model.go
+
 autobind:
   - "github.com/danielvladco/go-proto-gql/example/codegen/pb"
 
