--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,8 +21,15 @@ jobs:
       - name: Build
         run: CGO_ENABLED=0 GOOS=linux go build -v ./cmd/gateway
 
-      - name: Test
-        run: go test -v ./...
+      - name: Test and coverage
+        run: go test -v `go list ./... | grep -v example` -coverprofile=coverage.txt -covermode=atomic
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v1.0.2
+        with:
+          file: ./coverage.txt
+          flags: unittests
+          name: codecov-umbrella
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v1.1.0
