--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v1.0.2
         with:
+          token: 23b95a60-06af-4c2a-921d-c9df5d2c2a17
           file: ./coverage.txt
           flags: unittests
           name: codecov-umbrella
