--- a/example/codegen/Makefile
+++ b/example/codegen/Makefile
@@ -7,19 +7,19 @@ generate: gen-gqlgen-constructs gen-gqlgen-options
 
 .PHONY: gen-gogql-%
 gen-gogql-%:
-	protoc --gogql_out=paths=source_relative:. -I . -I ../../ ./pb/$*.proto --experimental_allow_proto3_optional
+	protoc --gogql_out=paths=source_relative:. -I ../../pb ./pb/$*.proto --experimental_allow_proto3_optional
 
 .PHONY: gen-pb-grpc-%
 gen-pb-grpc-%:
-	protoc --go-grpc_out=paths=source_relative:. -I . -I ../../ ./pb/$*.proto --experimental_allow_proto3_optional
+	protoc --go-grpc_out=paths=source_relative:. -I ../../pb ./pb/$*.proto --experimental_allow_proto3_optional
 
 .PHONY: gen-pb-%
 gen-pb-%:
-	protoc --go_out=paths=source_relative:. -I . -I ../../ ./pb/$*.proto --experimental_allow_proto3_optional
+	protoc --go_out=paths=source_relative:. -I ../../pb ./pb/$*.proto --experimental_allow_proto3_optional
 
 .PHONY: gen-gql-%
 gen-gql-%:
-	protoc --gql_out=svc=true:. -I . -I ../../ ./pb/$*.proto  --experimental_allow_proto3_optional
+	protoc --gql_out=svc=true:. -I ../../pb ./pb/$*.proto  --experimental_allow_proto3_optional
 
 .PHONY: gen-gqlgen-%
 gen-gqlgen-%: gen-gql-% gen-gogql-% gen-pb-% gen-pb-grpc-%
