--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,6 +18,51 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@master
 
+      - name: Go fmt
+        run: |
+          go fmt ./...
+          
+          files=$(git diff --name-only)
+          if [[ -n $files ]]; then
+            echo "The following files are not formatted correctly:"
+            echo $files
+            exit 1
+          fi
+
+      - name: Generated files are up to date
+        run: |
+          make
+          pushd example/codegen/api
+          make
+          popd 
+          pushd example/gateway
+          make
+          popd
+
+          files=$(git diff --name-only)
+          if [[ -n $files ]]; then
+            echo "Detected changes to the files after generating (please run make and push again):"
+            echo $files
+            exit 1
+          fi
+
+      - name: Go mod is tidy
+        run: |
+          go mod tidy
+          pushd example/codegen
+          go mod tidy
+          popd 
+          pushd example/codegen/api
+          go mod tidy
+          popd
+
+          files=$(git diff --name-only)
+          if [[ -n $files ]]; then
+            echo "Detected changes to the files after mod tidy (please run `go mod tidy` and push again):"
+            echo $files
+            exit 1
+          fi
+
       - name: Build
         run: CGO_ENABLED=0 GOOS=linux go build -v ./cmd/gateway
 
@@ -44,7 +89,7 @@ jobs:
           # Server address of Docker registry. If not set then will default to Docker Hub
           registry: docker.pkg.github.com
           # Docker repository to tag the image with
-          repository: ${{ github.repository }}danielvladco/go-proto-gql/gateway
+          repository: ${{ github.repository }}/gateway
           # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
           tag_with_sha: true
           tag_with_ref: true
