--- a/example/gateway/docker-compose.yaml
+++ b/example/gateway/docker-compose.yaml
@@ -17,6 +17,6 @@ services:
 
   gateway:
     <<: *base_go_service
-    command: go run ./cmd/gateway/main.go --cfg ./example/gateway/config.json
+    command: go run ./cmd/gateway/main.go --config ./example/gateway/config.yaml
     ports:
     - 8080:8080
