--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,19 @@
-site_name: My Docs
+site_name: API Adapter
 site_dir: .mkdocs
 repo_url: https://github.com/danielvladco/go-proto-gql
+markdown_extensions:
+  - pymdownx.tasklist:
+      custom_checkbox: true
+
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+
+  - pymdownx.highlight:
+      anchor_linenums: true
+
+  - pymdownx.superfences
+
 theme:
   name: material
   palette:
