--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,18 +16,9 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@master
 
-      - name: Run tests with coverage
+      - name: Run tests
         run: |
-          go test -v `go list ./... | grep -v example | grep -v tools` -coverprofile=coverage.tmp.txt -covermode=atomic -coverpkg=github.com/danielvladco/go-proto-gql/...
-          cat coverage.tmp.txt | grep -v .pb.go > coverage.txt
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v1.0.2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
-          flags: unittests
-          name: codecov-umbrella
+          go test -v `go list ./... | grep -v example | grep -v tools` -coverprofile=coverage.tmp.txt -covermode=atomic -coverpkg=github.com/tailor-inc/go-proto-gql/...
 
   sanity_checks:
     name: Sanity checks
@@ -57,11 +48,11 @@ jobs:
           go mod tidy
           pushd example/codegen
           go mod tidy
-          popd 
+          popd
           pushd example/codegen/api
           go mod tidy
           popd
-          
+
           files=$(git diff --name-only)
           if [[ -n $files ]]; then
             echo "Detected changes to the files after mod tidy (please run `go mod tidy` and push again):"
@@ -74,45 +65,14 @@ jobs:
           make
           pushd example/codegen/api
           make
-          popd 
+          popd
           pushd example/gateway
           make
           popd
-          
+
           files=$(git diff --name-only)
           if [[ -n $files ]]; then
             echo "Detected changes to the files after generating (please run make and push again):"
             echo $files
             exit 1
           fi
-
-  build_push_gateway:
-    name: Build & Push Gateway
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.16
-        id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@master
-
-      - name: Build
-        run: CGO_ENABLED=0 GOOS=linux go build -v ./cmd/gateway
-
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v1.1.0
-        with:
-          # Username used to log in to a Docker registry. If not set then no login will occur
-          username: danielvladco
-          # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-          password: ${{ secrets.GITHUB_TOKEN }}
-          # Server address of Docker registry. If not set then will default to Docker Hub
-          registry: docker.pkg.github.com
-          # Docker repository to tag the image with
-          repository: ${{ github.repository }}/gateway
-          # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
-          tag_with_sha: true
-          tag_with_ref: true
